# testgen-demo

./: .gitignore  CLAUDE.md  CLAUDE_LOG.md  Makefile  README.md  conftest.py  environment_config.py  pyproject.toml
.claude/: settings.json
.claude/agent-memory/testgen/: MEMORY.md  endpoint_schemas.md  project_test_suite_state.md  test_data_files.md  validator_classes.md
.claude/agents/: testgen.md  testqa.md  testrun.md
.claude/rules/: code-style.md  framework-rules.md  testing-standards.md
.claude/skills/test-generator/: SKILL.md
.claude/skills/validator-generator/: SKILL.md
.github/workflows/: ci.yml
config/: environments.yaml
docs/test-specs/: test-spec-countries.md  test-spec-weather.md
src/utils/: environment_config.py
src/validators/: base_validator.py  country_validator.py  currency_validator.py  forecast_validator.py
test_data/: cities.json  lang_inputs.json
tests/: test_countries.py  test_currency.py  test_lang.py  test_weather.py
