[project]
name = "testgen-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "allure-pytest>=2.13",
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
